# SonicTuning

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  LICENSE.md  README.md
.github/workflows/: tests.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TuningTable.h
test/: CMakeLists.txt  PluginProcessorTests.cpp  TuningTableTests.cpp
